altered layout and added friends

--- a/my-app/public/manifest.json
+++ b/my-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "WatchTracker",
-  "name": "WatchTracker - Track Movies and TV Shows",
+  "name": "WatchTracker - Track your movies and shows",
   "icons": [
     {
       "src": "favicon.ico",
